version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/ExternalData/AXDTImportSettings.rst.txt
.. vale off



:class:`AXDTImportSettings`
===========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.ExternalData.AXDTImportSettings

   Bases: :py:obj:`object`


   
   defines how to import external data from an AXDT file.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AXDTImportSettings

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Dimension`
            - The dimension of the AXDT file.
          * - :py:attr:`~Format`
            - Gets the existing corresponding format.







Property detail
---------------
.. py:property:: Dimension
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SourceDimension]


   
   The dimension of the AXDT file.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!







.. vale on